--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Palindromo</title>
 </head>
 <body>
+    <header id="header">
+        <figure id="logo">
+            <img src="/img/pal.png" alt="imagenDePalindromo">
+        </figure>
+    </header>
+    <main id="main">
+        <h1 id="title">Esto es un palindromo ?</h1>
+        <label for="text-input">Ingrese un texto para buscar un palindromo</label>
+        <input type="text" name="" id="text-input">
+        <button type="button" id="check-btn">CHECK</button>
+        <span id="result">
+
+        </span>
+    </main>
     
 </body>
 </html>
