--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <label for="text-input">Ingrese un texto para buscar un palindromo</label>
         <input type="text" name="" id="text-input">
         <button type="button" id="check-btn">CHECK</button>
-        <span id="result">
+        <span id="result" class="hidden">
 
         </span>
     </main>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
